toolchain/internal/core/analysis/testdata/errors/structure/duplicate_key_nested_object.vdl
// @expect: E701

const cfg = {
  nested {
    host "localhost"
    host "127.0.0.1"
  }
}
